--- a/thesis/Co - Features.lyx
+++ b/thesis/Co - Features.lyx
@@ -1240,10 +1240,10 @@ used to search an interval of values in the numerical field.
 \series bold
 Full Regex
 \series default
-: regular expressions provide a concise and flexible means to "match" (specify
+: regular expressions provide a concise and flexible mean to "match" (specify
  and recognize) strings of text, such as particular characters, words, or
  patterns of characters.
- One issue about Regular expressions is that they are very complicated for
+ One issue about regular expressions is that they are very complicated for
  a normal user to manipulate.
  e.g.
 
@@ -2073,7 +2073,7 @@ Different vocalization
 \series default
 : suggest all the possible vocalizations sorted by the frequency of each
  one.
- Helpful to refine the ambigous queries and make them more accurate.
+ Helpful to refine the ambiguous queries and make them more accurate.
  e.g.
  suggest for
 \family roman
@@ -2998,7 +2998,7 @@ conjugation in Past tense of
 \lang arabic_arabi
 قال
 \lang english
- (say)
+ (to say)
 \emph default
  to find
 \family roman
