--- a/thesis/Co - Features.lyx
+++ b/thesis/Co - Features.lyx
@@ -3761,7 +3761,7 @@ Best Names, Foreign words , Words with foreign origin
 Translation embedded search: 
 \series default
 helps users to search using words translations to other languages instead
- of the native arabic text.
+ of the native Arabic text.
  e.g.
  
 \emph on
